--- a/src/views/CS/Write/style.css
+++ b/src/views/CS/Write/style.css
@@ -116,10 +116,10 @@
 
 #cs-write-wrapper .modal-input {
     flex: 1;
-    
+
     border-radius: 6px;
     border: 1px solid rgba(238, 238, 238, 1);
-    padding:  8px 16px;
+    padding: 8px 16px;
 
     background: none;
     outline: none;
@@ -132,6 +132,10 @@
 }
 
 #cs-write-wrapper .modal-main {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
     margin-top: 20px;
     margin-bottom: 40px;
 }
@@ -139,6 +143,10 @@
 #cs-write-wrapper .modal-main .th,
 #cs-write-wrapper .modal-main .tr {
     gap: 52px;
+}
+
+#cs-write-wrapper .modal-main .tr {
+    cursor: pointer;
 }
 
 #cs-write-wrapper .modal-main .td-nurse-id,
@@ -168,4 +176,9 @@
 #cs-write-wrapper .modal-bottom .button {
     box-sizing: border-box;
     width: 200px;
+}
+
+#cs-write-wrapper .modal-pagination-box {
+    display: flex;
+    justify-content: center;
 }
